[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "analytics-store"
version = "0.1.0"
authors = [
    { name="Wicks Analytics LTD", email="wicks.analytics.ltd@gmail.com" }
]
description = "A Python package for data analysis and analytics using Polars"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "polars>=0.20.0",
    "numpy>=1.21.0",
    "matplotlib>=3.4.0",
    "scipy>=1.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/Wicks-Analytics/analytics_store"
"Bug Tracker" = "https://github.com/Wicks-Analytics/analytics_store/issues"
